package CleaningRobot.RobotP2P;

message RobotDataProto {
  required string id = 1;
  required int32 grpcPort = 2;
  required string ipAddress = 3;
  required int32 district = 4;

  message Position {
    required int32 x = 1;
    required int32 y = 2;
  }
  required Position gridPos = 5;
}

message Status {
  required string robotID = 1;
  required bool status = 2;
}

message MaintenanceRequest {
  required string robotID = 1;
  required int64 timestamp = 2;
}

service BotNetService {
  rpc hello(RobotDataProto) returns (Status);
  rpc goodbye(RobotDataProto) returns (Status);
  rpc requestMaintenance(MaintenanceRequest) returns (Status);
  rpc freeMechanic(Status) returns (Status);
}
